# imgutils

./: README.md  setup.cfg
src/: convert_images.py  crop_image.py  resize_image.py
src/imgutils/: genicons.py
