[metadata]
name = imgutils-pkg-tgraefe
version = 0.0.1
author = Timothy Graefe
author_email = tgraefe@javamata.net
description = Basic command line utilities to invoke PIL
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PIL, image
url = https://github.com/timothygraefe/imgutils
project_urls =
    Bug Tracker = https://github.com/timothygraefe/imgutils/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.2
install_requires = PIL

[options.packages.find]
where = src
